@@ -6,6 +6,7 @@
 * + View/Edit OCR toggle
 * Don't zoom in/out if plus/minus pressed whilst editing OCR
 * Allow cut/copy/paste whilst editing OCR
+* Fixed bug manually adding OCR that overlaps with existing words
 * Update to Hungarian translation (thanks to csola)
 
 
